# Financial_news_intelligence_system

./: .gitignore  pyproject.toml
notebooks/: notebook.ipynb  notebookprac.ipynb
src/agents_lang/: ingestion_agent.py  ingestion_agents.py
src/data_ingestion/: data_ingestion.py  data_ingestion_full.py
src/deduplication/: removing_duplicate.py
src/embedding/: embedder.py
src/impact_scores/: mapping_score.py
src/name_ner/: ner_full.py
src/orchestrator/: langgraph_workflow.py
src/preprocessing/: preprocessing_full.py
src/query_engine/: engine.py
src/utils/: logger_system.py
testing/: unit_test.py
